Added all text for fiction and nonfiction LF

--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
   <a href="aTheoryOfAcknowledgement.html" class="subNav-link">
     <p class="subNav-link--text">2. A Theory of Acknowledgement</p>
   </a>
-  <a href="theMeeting.html" class="subNav-link">
-    <p class="subNav-link--text">The Meeting</p>
+  <a href="anAddictMeetsRachelBloom.html" class="subNav-link">
+    <p class="subNav-link--text">An Addict Meets Rachel Bloom</p>
   </a>
   <a href="anAddictsDesperation.html" class="subNav-link">
     <p class="subNav-link--text">An Addict's Desperation</p>
@@ -159,17 +159,11 @@
   <a href="kingsSoConquered.html" class="subNav-link">
     <p class="subNav-link--text">5. Kings So Conquered</p>
   </a>
-  <a href="anExistentialCritiqueOfCapitalism.html" class="subNav-link">
-    <p class="subNav-link--text">6. An Existential Critique of Capitalism</p>
-  </a>
   <a href="assumptiveCritiques.html" class="subNav-link">
     <p class="subNav-link--text">7. Assumptive Critiques</p>
   </a>
   <a href="theSonderer.html" class="subNav-link">
     <p class="subNav-link--text">8. The Sonderer</p>
-  </a>
-  <a href="theWatchers.html" class="subNav-link">
-    <p class="subNav-link--text">9. The Watchers</p>
   </a>
   <a href="severed.html" class="subNav-link">
     <p class="subNav-link--text">10. Severed</p>
@@ -546,21 +540,18 @@
     >
       A Theory of Acknowledgement
     </a>
-    <a
-      href="anExistentialCritiqueOfCapitalism.html"
-      class="pieceLink pieceLink-LF"
-      id="lf3"
-    >
-      An Existential Critique of Capitalism
-    </a>
     <a href="assumptiveCritiques.html" class="pieceLink pieceLink-LF" id="lf4">
       Assumptive Critiques
     </a>
   </div>
   <div class="toc-set2--LF">
     <h3 class="header-LF">The Witness</h3>
-    <a href="theMeeting.html" class="pieceLink pieceLink-LF" id="lf7">
-      The Meeting
+    <a
+      href="anAddictMeetsRachelBloom.html"
+      class="pieceLink pieceLink-LF"
+      id="lf7"
+    >
+      An Addict Meets Rachel Bloom
     </a>
     <a href="anAddictsDesperation.html" class="pieceLink pieceLink-LF" id="lf7">
       An Addicts Desperation
@@ -580,9 +571,6 @@
     </a>
     <a href="theSonderer.html" class="pieceLink pieceLink-LF" id="lf8">
       The Sonderer
-    </a>
-    <a href="theWatchers.html" class="pieceLink pieceLink-LF" id="lf9">
-      The Watchers
     </a>
     <a href="severed.html" class="pieceLink pieceLink-LF" id="lf10">Severed</a>
   </div>
