--- a/pages/anAddictMeetsRachelBloom.html
+++ b/pages/anAddictMeetsRachelBloom.html
@@ -5,7 +5,7 @@
 {% extends "layout.html" %}
 
 <!-- Block Title -->
-{% block title %} {{head.title('theWatchers')}} {% endblock %}
+{% block title %} {{head.title('anAddictMeetsRachelBloom')}} {% endblock %}
 
 <!-- Block Content -->
 {% block content %}
@@ -14,7 +14,7 @@
 {% include "partials/nav/nav.html" %}
 
 <!-- Partial 2 NJK-->
-{% include "partials/nonfictionLF/tw.html" %}
+{% include "partials/nonfictionLF/aamrb.html" %}
 
 <!-- Endblock -->
 {% endblock %}
