--- a/kingsSoConquered.html
+++ b/kingsSoConquered.html
@@ -180,71 +180,56 @@
     <!------------ SHORTFORM NONFICTION ------------>
 <div class="subNav pointerEvents-none" id="list-nonfiction-short">
   <h2 class="subNav-header">Shortform Non-fiction - coming soon</h2>
-  <a href="#" class="subNav-link">
-    <p class="subNav-link--text">1. The Reasons I Can't Find</p>
+  <a href="#" class="subNav-link" id="sfM1">
+    <p class="subNav-link--text">Finding Zen</p>
   </a>
-  <a href="#" class="subNav-link">
-    <p class="subNav-link--text">2. Demolition Derby: HOUSE FOR SALE</p>
+  <a href="#" class="subNav-link" id="sfM2">
+    <p class="subNav-link--text">Into the Gray</p>
   </a>
-  <a href="#" class="subNav-link">
-    <p class="subNav-link--text">3. Growing Pains</p>
+  <a href="#" class="subNav-link" id="sfM4">
+    <p class="subNav-link--text">The Greener Side - Part 1</p>
   </a>
-  <a href="#" class="subNav-link">
-    <p class="subNav-link--text">4. Finding Zen</p>
+  <a href="#" class="subNav-link" id="sfM5">
+    <p class="subNav-link--text">The Greener Side - Part 2</p>
   </a>
-  <a href="#" class="subNav-link">
-    <p class="subNav-link--text">5. Into the Gray</p>
+  <a href="#" class="subNav-link" id="sfM6">
+    <p class="subNav-link--text">The Greener Side - Part 3</p>
   </a>
-
-  <!------------ THE GREENER SIDE ------------>
-  <!-- <div class="topNav-ddMenu--listLinkContainer hidden" id="theGreenerSide">
-    <p class="subNav-link--text">6. The Greener Side: Putting Down the Pen</p>
-    <div class="topNav-ddMenu--ddArrowContainer">
-      <div class="topNav-ddMenu--ddArrow" id="ddArrow-theGreenerSide">
-        &#9660;
-      </div>
-    </div>
-  </div>
-  <div class="topNav-ddMenu--miniListContainer hidden">
-    <a href="#" class="subNav-link">
-      <div class="topNav-ddMenu--categoryLink miniLink">Part 1</div>
-    </a>
-    <a href="#" class="subNav-link">
-      <div class="topNav-ddMenu--categoryLink miniLink">Part 2</div>
-    </a>
-    <a href="#" class="subNav-link">
-      <div class="topNav-ddMenu--categoryLink miniLink">Part 3</div>
-    </a>
-    <a href="#" class="subNav-link">
-      <div class="topNav-ddMenu--categoryLink miniLink">Part 4</div>
-    </a>
-    <a href="#" class="subNav-link">
-      <div class="topNav-ddMenu--categoryLink miniLink">Part 5</div>
-    </a>
-  </div> -->
-  <a href="#" class="subNav-link">
-    <p class="subNav-link--text">6. My Existential Romance</p>
+  <a href="#" class="subNav-link" id="sfM3">
+    <p class="subNav-link--text">Demolition Derby: HOUSE FOR SALE</p>
   </a>
-  <a href="#" class="subNav-link">
-    <p class="subNav-link--text">7. The Feeling of a Soft Mind</p>
+  <a href="#" class="subNav-link" id="sfM7">
+    <p class="subNav-link--text">The Greener Side - Part 4</p>
   </a>
-  <a href="#" class="subNav-link">
-    <p class="subNav-link--text">8. The Outside Witness</p>
+  <a href="#" class="subNav-link" id="sfM8">
+    <p class="subNav-link--text">The Greener Side - Part 5</p>
   </a>
-  <a href="#" class="subNav-link">
-    <p class="subNav-link--text">9. End Days</p>
+  <a href="#" class="subNav-link" id="sfM9">
+    <p class="subNav-link--text">End Days</p>
   </a>
-  <a href="#" class="subNav-link">
-    <p class="subNav-link--text">10. The Midwestern Root</p>
+  <a href="#" class="subNav-link" id="sfM10">
+    <p class="subNav-link--text">Moments In-between</p>
   </a>
-  <a href="#" class="subNav-link">
-    <p class="subNav-link--text">11. Moments In-between</p>
+  <a href="#" class="subNav-link" id="sfM11">
+    <p class="subNav-link--text">My Existential Romance</p>
   </a>
-  <a href="#" class="subNav-link">
-    <p class="subNav-link--text">12. Switched</p>
+  <a href="#" class="subNav-link" id="sfM12">
+    <p class="subNav-link--text">The Feeling of a Soft Mind</p>
   </a>
-  <a href="#" class="subNav-link">
-    <p class="subNav-link--text">13. And, Today</p>
+  <a href="#" class="subNav-link" id="sfM13">
+    <p class="subNav-link--text">The Outside Witness</p>
+  </a>
+  <a href="#" class="subNav-link" id="sfM14">
+    <p class="subNav-link--text">The Reasons I Can't Find</p>
+  </a>
+  <a href="#" class="subNav-link" id="sfM15">
+    <p class="subNav-link--text">The Day I Died Again</p>
+  </a>
+  <a href="#" class="subNav-link" id="sfM16">
+    <p class="subNav-link--text">And, Today</p>
+  </a>
+  <a href="#" class="subNav-link" id="sfM17">
+    <p class="subNav-link--text">The Midwestern Root</p>
   </a>
 </div>
 
@@ -462,6 +447,6 @@
     <script src="toc.js"></script>
     <script src="poems.js"></script>
     <script src="aphorisms.js"></script>
-    <script src="tocModals.js"></script>
     <script src="mediaQueries.js"></script>
+    <script src="tocModals.js"></script>
 </html>
