--- a/index.html
+++ b/index.html
@@ -415,14 +415,14 @@
       <div class="mainLink" id="toc-chaptersLink">
         <p class="mainLink-text">Maxa Millennial Chapters</p>
       </div>
+      <div class="mainLink" id="toc-SF-NonfictionLink">
+        <p class="mainLink-text">The Greener Side</p>
+      </div>
       <div class="mainLink" id="toc-fictionLink">
         <p class="mainLink-text">Fiction</p>
       </div>
       <div class="mainLink" id="toc-LF-NonfictionLink">
         <p class="mainLink-text">Longform Non-fiction</p>
-      </div>
-      <div class="mainLink" id="toc-SF-NonfictionLink">
-        <p class="mainLink-text">Shortform Non-fiction</p>
       </div>
       <div class="mainLink" id="toc-aphorismsLink">
         <p class="mainLink-text">Aphorisms</p>
@@ -564,19 +564,6 @@
     <!--! Nonfiction SF -->
     <!-- <!--! Shortform Nonfiction -->
 <div class="toc-pieceLinks--SF pointerEvents-none" id="toc-SFDisplay">
-  <a href="#" class="pieceLink pieceLink-SF" id="sf1">
-    The Reasons I Can't Find
-  </a>
-  <div class="sf1-line">
-    <div class="sf1-line--movingBlock"></div>
-  </div>
-  <a href="#" class="pieceLink pieceLink-SF" id="sf2">
-    Demolition Derby: HOUSE FOR SALE
-  </a>
-  <a href="#" class="pieceLink pieceLink-SF" id="sf3">The Day I Died Again</a>
-  <div class="sf3-line">
-    <div class="sf3-line--movingBlock"></div>
-  </div>
   <a href="#" class="pieceLink pieceLink-SF" id="sf4">Finding Zen</a>
   <div class="sf4-line">
     <div class="sf4-line--movingBlock"></div>
@@ -584,43 +571,6 @@
   <a href="#" class="pieceLink pieceLink-SF" id="sf5">Into the Gray</a>
   <div class="sf5-line">
     <div class="sf5-line--movingBlock"></div>
-  </div>
-  <a href="#" class="pieceLink pieceLink-SF" id="sf6">My Existential Romance</a>
-  <div class="sf6-line">
-    <div class="sf6-line--movingBlock"></div>
-  </div>
-  <a href="#" class="pieceLink pieceLink-SF" id="sf7">
-    The Feeling of a Soft Mind
-  </a>
-  <div class="sf7-line">
-    <div class="sf7-line--movingBlock"></div>
-  </div>
-  <a href="#" class="pieceLink pieceLink-SF" id="sf8">The Outside Witness</a>
-  <div class="sf8-line">
-    <div class="sf8-line--movingBlock"></div>
-  </div>
-  <a href="#" class="pieceLink pieceLink-SF" id="sf9">End Days</a>
-  <div class="sf9-line">
-    <div class="sf9-line--movingBlock"></div>
-  </div>
-  <a href="#" class="pieceLink pieceLink-SF" id="sf10">The Midwestern Root</a>
-  <a href="#" class="pieceLink pieceLink-SF" id="sf11">Moments In-Between</a>
-  <div class="sf11-line sf11-line--1">
-    <div class="sf11-line--movingBlock"></div>
-  </div>
-  <div class="sf11-line sf11-line--2">
-    <div class="sf11-line--movingBlock"></div>
-  </div>
-  <div class="sf11-line sf11-line--3">
-    <div class="sf11-line--movingBlock"></div>
-  </div>
-  <div class="sf11-line sf11-line--4">
-    <div class="sf11-line--movingBlock"></div>
-  </div>
-  <a href="#" class="pieceLink pieceLink-SF" id="sf12">Switched</a>
-  <a href="#" class="pieceLink pieceLink-SF" id="sf13">And, Today</a>
-  <div class="sf13-line">
-    <div class="sf13-line--movingBlock"></div>
   </div>
   <a href="#" class="pieceLink pieceLink-SF" id="sf14">The Greener Side</a>
   <div class="sf14-line sf14-line--1">
@@ -658,6 +608,56 @@
       <div class="sf15-line--movingblock"></div>
     </div>
   </a>
+  <a href="#" class="pieceLink pieceLink-SF" id="sf2">
+    Demolition Derby: HOUSE FOR SALE
+  </a>
+  <a href="#" class="pieceLink pieceLink-SF" id="sf9">End Days</a>
+  <div class="sf9-line">
+    <div class="sf9-line--movingBlock"></div>
+  </div>
+  <a href="#" class="pieceLink pieceLink-SF" id="sf11">Moments In-Between</a>
+  <div class="sf11-line sf11-line--1">
+    <div class="sf11-line--movingBlock"></div>
+  </div>
+  <div class="sf11-line sf11-line--2">
+    <div class="sf11-line--movingBlock"></div>
+  </div>
+  <div class="sf11-line sf11-line--3">
+    <div class="sf11-line--movingBlock"></div>
+  </div>
+  <div class="sf11-line sf11-line--4">
+    <div class="sf11-line--movingBlock"></div>
+  </div>
+  <a href="#" class="pieceLink pieceLink-SF" id="sf6">My Existential Romance</a>
+  <div class="sf6-line">
+    <div class="sf6-line--movingBlock"></div>
+  </div>
+  <a href="#" class="pieceLink pieceLink-SF" id="sf1">
+    The Reasons I Can't Find
+  </a>
+  <div class="sf1-line">
+    <div class="sf1-line--movingBlock"></div>
+  </div>
+  <a href="#" class="pieceLink pieceLink-SF" id="sf7">
+    The Feeling of a Soft Mind
+  </a>
+  <div class="sf7-line">
+    <div class="sf7-line--movingBlock"></div>
+  </div>
+  <a href="#" class="pieceLink pieceLink-SF" id="sf8">The Outside Witness</a>
+  <div class="sf8-line">
+    <div class="sf8-line--movingBlock"></div>
+  </div>
+  <a href="#" class="pieceLink pieceLink-SF" id="sf3">The Day I Died Again</a>
+  <div class="sf3-line">
+    <div class="sf3-line--movingBlock"></div>
+  </div>
+  <a href="#" class="pieceLink pieceLink-SF" id="sf12">Switched</a>
+  <a href="#" class="pieceLink pieceLink-SF" id="sf13">And, Today</a>
+  <div class="sf13-line">
+    <div class="sf13-line--movingBlock"></div>
+  </div>
+  <a href="#" class="pieceLink pieceLink-SF" id="sf10">The Midwestern Root</a>
 </div>
  -->
     <!--! Aphorisms  -->
