--- a/index.html
+++ b/index.html
@@ -706,6 +706,10 @@
     </div>
   </div>
   <div class="toc-pieceDisplay" id="aphorismTextAndTitle"></div>
+  <div class="modal-close--toc" id="aphorismClose">
+    <div class="line-1"></div>
+    <div class="line-2"></div>
+  </div>
 </div>
 
     <!--! Poetry -->
@@ -748,6 +752,11 @@
     <div class="pieceLink pieceLink-poetry" id="p23">The Wheel Is Turning</div>
   </div>
   <div class="toc-pieceDisplay" id="poemTextAndTitle">
+    <div class="modal-close--toc" id="poemClose">
+      <div class="line-1"></div>
+      <div class="line-2"></div>
+    </div>
+
     <div class="test"></div>
   </div>
 </div>
