Aphorisms and poems mobile 3

--- a/index.html
+++ b/index.html
@@ -751,9 +751,7 @@
     </div>
     <div class="pieceLink pieceLink-poetry" id="p23">The Wheel Is Turning</div>
   </div>
-  <div class="toc-pieceDisplay" id="poemTextAndTitle">
-    <div class="test"></div>
-  </div>
+  <div class="toc-pieceDisplay" id="poemTextAndTitle"></div>
   <div class="modal-close--toc" id="poemClose">
     <div class="line-1"></div>
     <div class="line-2"></div>
