Added second layout to remove JS errors from unneeded pages and fix sticky nav. First cut looks finished except for contact page  and about page.

--- a/index.html
+++ b/index.html
@@ -668,6 +668,7 @@
 >
   <div class="toc-miniContainer">
     <div class="miniContainer-header">Aphorism List</div>
+    <div class="miniContainer-header--close" id="aphorismClose">Close</div>
     <div class="pieceLink pieceLink-aphorism" id="a1">A Drop In the Ocean</div>
     <div class="pieceLink pieceLink-aphorism" id="a2">Age Old Wisdom</div>
     <div class="pieceLink pieceLink-aphorism" id="a3">Charity Work</div>
@@ -706,10 +707,6 @@
     </div>
   </div>
   <div class="toc-pieceDisplay" id="aphorismTextAndTitle"></div>
-  <div class="modal-close--toc" id="aphorismClose">
-    <div class="line-1"></div>
-    <div class="line-2"></div>
-  </div>
 </div>
 
     <!--! Poetry -->
@@ -717,6 +714,7 @@
 <div class="toc-pieceLinks--poetry pointerEvents-none" id="toc-poetryDisplay">
   <div class="toc-miniContainer">
     <div class="miniContainer-header">Poem List</div>
+    <div class="miniContainer-header--close" id="poemClose">Close</div>
     <div class="pieceLink pieceLink-poetry" id="p1">5:21</div>
     <div class="pieceLink pieceLink-poetry" id="p2">A Drug for Humans</div>
     <div class="pieceLink pieceLink-poetry" id="p3">DOCTYPE! Soulscape</div>
@@ -752,10 +750,6 @@
     <div class="pieceLink pieceLink-poetry" id="p23">The Wheel Is Turning</div>
   </div>
   <div class="toc-pieceDisplay" id="poemTextAndTitle"></div>
-  <div class="modal-close--toc" id="poemClose">
-    <div class="line-1"></div>
-    <div class="line-2"></div>
-  </div>
 </div>
 
   </div>
