--- a/pages/assumptiveCritiques.html
+++ b/pages/assumptiveCritiques.html
@@ -2,7 +2,7 @@
 {% import 'macros/title-macro.html' as head %}
 
 <!-- Meta Blocks -->
-{% extends "layout.html" %}
+{% extends "layout2.html" %}
 
 <!-- Block Title -->
 {% block title %} {{head.title('assumptiveCritiques')}} {% endblock %}
