--- a/severed.html
+++ b/severed.html
@@ -34,7 +34,7 @@
     <!--====== STYLE SHEETS ======-->
     <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body class="pageContainer">
+  <body class="">
     
 
 <!-- Partial 1 NJK-->
@@ -446,9 +446,4 @@
     <!------- JAVASCRIPT ------->
     <script src="topNav.js"></script>
     <script src="smoothScroll.js"></script>
-    <script src="toc.js"></script>
-    <script src="poems.js"></script>
-    <script src="aphorisms.js"></script>
-    <script src="mediaQueries.js"></script>
-    <script src="tocModals.js"></script>
 </html>
