Final touches to first cut 5

--- a/about.html
+++ b/about.html
@@ -2,9 +2,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-                             
-<title>The Time I Met Rachel Bloom</title>
-   
+                               
+<title>About</title>
+ 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
