--- a/pages/about.html
+++ b/pages/about.html
@@ -5,7 +5,7 @@
 {% extends "layout2.html" %}
 
 <!-- Block Title -->
-{% block title %} {{head.title('theTimeIMetRachelBloom')}} {% endblock %}
+{% block title %} {{head.title('about')}} {% endblock %}
 
 <!-- Block Content -->
 {% block content %}
