--- a/abishopswatchdog.html
+++ b/abishopswatchdog.html
@@ -316,5 +316,35 @@ Statcounter"
       </div>
     </noscript>
     <!-- End of Statcounter Code -->
+    <!-- Default Statcounter code for MM GF
+http://maxamillennial.getforge.io -->
+    <script type="text/javascript">
+      var sc_project = 12824983;
+      var sc_invisible = 1;
+      var sc_security = '2ac122b3';
+    </script>
+    <script
+      type="text/javascript"
+      src="https://www.statcounter.com/counter/counter.js"
+      async
+    ></script>
+    <noscript>
+      <div class="statcounter">
+        <a
+          title="Web Analytics
+Made Easy - Statcounter"
+          href="https://statcounter.com/"
+          target="_blank"
+        >
+          <img
+            class="statcounter"
+            src="https://c.statcounter.com/12824983/0/2ac122b3/1/"
+            alt="Web Analytics Made Easy - Statcounter"
+            referrerpolicy="no-referrer-when-downgrade"
+          />
+        </a>
+      </div>
+    </noscript>
+    <!-- End of Statcounter Code -->
   </body>
 </html>
