updated nav to link back to ToC

--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
 
     <link rel="preconnect" href="https://fonts.gstatic.com" />
 
-    <!-- BASE FONTS ======-->
+    <!--====== BASE FONTS ======-->
 
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
       rel="stylesheet"
     />
 
-    <!-- PAGE FONTS ======-->
+    <!--====== PAGE FONTS ======-->
     <link
       href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap"
       rel="stylesheet"
@@ -51,7 +51,7 @@
     <a href="/index.html" class="topNav-title">Maxa Millennial Collections</a>
   </div>
   <div class="topNav-right">
-    <a href="https://panagram.work/" class="topNav-link">Panagram</a>
+    <a href="/index.html" class="topNav-link">Table of Contents</a>
   </div>
 </section>
 
@@ -289,8 +289,9 @@
       <h2 class="toc-title--subHead">The Measured Myth</h2>
     </div>
     <!--! FICTION -->
-    <!--! FICTION -->
+    <!-- ====== Fiction Container ====== -->
 <div class="toc-pieceLinks--fiction pointerEvents-none" id="toc-fictionDisplay">
+  <!-- Fiction Link -->
   <a
     href="/mm/fiction/mirrorInTheMirror.html"
     class="pieceLink pieceLink-fiction"
@@ -298,6 +299,7 @@
   >
     Mirror In the Mirror
   </a>
+  <!-- Fiction Link -->
   <a
     href="/mm/fiction/aChairToNowhere.html"
     class="pieceLink pieceLink-fiction"
@@ -305,6 +307,7 @@
   >
     A Chair to Nowhere
   </a>
+  <!-- Fiction Link -->
   <a
     href="/mm/fiction/aBishopsWatchdog.html"
     class="pieceLink pieceLink-fiction"
@@ -312,6 +315,7 @@
   >
     A Bishop's Watchdog
   </a>
+  <!-- Fiction Link -->
   <a
     href="/mm/fiction/theDoctorsApprentice.html"
     class="pieceLink pieceLink-fiction"
@@ -319,6 +323,7 @@
   >
     The Doctor's Apprentice
   </a>
+  <!-- Fiction Link -->
   <a
     href="/mm/fiction/politiciansOfTheFuture.html"
     class="pieceLink pieceLink-fiction"
@@ -329,11 +334,12 @@
 </div>
 
     <!--! CHAPTERS -->
-    <!--! CHAPTERS -->
+    <!-- ====== Chapters Container ====== -->
 <div
   class="toc-pieceLinks--chapters pointerEvents-none"
   id="toc-chaptersDisplay"
 >
+  <!-- Chapter Link -->
   <a
     href="/mm/chapters/prologue.html"
     class="pieceLink pieceLink-chapter"
@@ -341,9 +347,11 @@
   >
     Prologue: A Meeting
   </a>
+  <!-- Chapter After-Line -->
   <div class="pieceLink-afterLine" id="c0-line">
     <div class="pieceLink-afterLine--movingBlock"></div>
   </div>
+  <!-- Chapter Link -->
   <a
     href="/mm/chapters/chapter1.html"
     class="pieceLink pieceLink-chapter"
@@ -351,9 +359,11 @@
   >
     Chapter 1: A Terminal Diagnosis
   </a>
+  <!-- Chapter After-Line -->
   <div class="pieceLink-afterLine" id="c1-line">
     <div class="pieceLink-afterLine--movingBlock"></div>
   </div>
+  <!-- Chapter Link -->
   <a
     href="/mm/chapters/chapter2.html"
     class="pieceLink pieceLink-chapter"
@@ -361,9 +371,11 @@
   >
     Chapter 2: Surviving the First Death
   </a>
+  <!-- Chapter After-Line -->
   <div class="pieceLink-afterLine" id="c2-line">
     <div class="pieceLink-afterLine--movingBlock"></div>
   </div>
+  <!-- Chapter Link -->
   <a
     href="/mm/chapters/chapter3.html"
     class="pieceLink pieceLink-chapter"
@@ -371,9 +383,11 @@
   >
     Chapter 3: Ego Death
   </a>
+  <!-- Chapter After-Line -->
   <div class="pieceLink-afterLine" id="c3-line">
     <div class="pieceLink-afterLine--movingBlock"></div>
   </div>
+  <!-- Chapter Link -->
   <a
     href="/mm/chapters/chapter4.html"
     class="pieceLink pieceLink-chapter"
@@ -381,9 +395,11 @@
   >
     Chapter 4: The Fight to Undermine
   </a>
+  <!-- Chapter After-Line -->
   <div class="pieceLink-afterLine" id="c4-line">
     <div class="pieceLink-afterLine--movingBlock"></div>
   </div>
+  <!-- Chapter Link -->
   <a
     href="/mm/chapters/chapter5.html"
     class="pieceLink pieceLink-chapter"
@@ -391,10 +407,11 @@
   >
     Chapter 5: My Brothers and Sisters
   </a>
+  <!-- Chapter After-Line -->
   <div class="pieceLink-afterLine" id="c5-line">
     <div class="pieceLink-afterLine--movingBlock"></div>
   </div>
-
+  <!-- Chapter Link -->
   <a
     href="/mm/chapters/chapter6.html"
     class="pieceLink pieceLink-chapter"
@@ -404,11 +421,12 @@
   </a>
 </div>
 
-    <!--! Nonfiction LF -->
-    <!--! Longform Nonfiction -->
+    <!--! Nonfiction -->
+    <!-- ====== Nonfiction Container ====== -->
 <div class="toc-pieceLinks--LF pointerEvents-none" id="toc-LFDisplay">
   <div class="toc-set1--LF">
     <h3 class="header-LF">The Essays</h3>
+    <!-- Nonfiction Link -->
     <a
       href="/mm/nonfiction/anEssayConcerningYou.html"
       class="pieceLink pieceLink-LF"
@@ -416,6 +434,7 @@
     >
       An Essay Concerning You
     </a>
+    <!-- Nonfiction Link -->
     <a
       href="/mm/nonfiction/aTheoryOfAcknowledgement.html"
       class="pieceLink pieceLink-LF"
@@ -423,6 +442,7 @@
     >
       A Theory of Acknowledgement
     </a>
+    <!-- Nonfiction Link -->
     <a
       href="/mm/nonfiction/assumptiveCritiques.html"
       class="pieceLink pieceLink-LF"
@@ -433,6 +453,7 @@
   </div>
   <div class="toc-set2--LF">
     <h3 class="header-LF">The Witness</h3>
+    <!-- Nonfiction Link -->
     <a
       href="/mm/nonfiction/anAddictMeetsRachelBloom.html"
       class="pieceLink pieceLink-LF"
@@ -440,6 +461,7 @@
     >
       An Addict Meets Rachel Bloom
     </a>
+    <!-- Nonfiction Link -->
     <a
       href="/mm/nonfiction/anAddictsDesperation.html"
       class="pieceLink pieceLink-LF"
@@ -447,6 +469,7 @@
     >
       An Addicts Desperation
     </a>
+    <!-- Nonfiction Link -->
     <a
       href="/mm/nonfiction/theTimeIMetRachelBloom.html"
       class="pieceLink pieceLink-LF"
@@ -454,6 +477,7 @@
     >
       The Time I Met Rachel Bloom
     </a>
+    <!-- Nonfiction Link -->
     <a
       href="/mm/nonfiction/aStrangersStranger.html"
       class="pieceLink pieceLink-LF"
@@ -461,6 +485,7 @@
     >
       A Stranger's Stranger
     </a>
+    <!-- Nonfiction Link -->
     <a
       href="/mm/nonfiction/kingsSoConquered.html"
       class="pieceLink pieceLink-LF"
@@ -468,6 +493,7 @@
     >
       Kings So Conquered
     </a>
+    <!-- Nonfiction Link -->
     <a
       href="/mm/nonfiction/theSonderer.html"
       class="pieceLink pieceLink-LF"
@@ -475,6 +501,7 @@
     >
       The Sonderer
     </a>
+    <!-- Nonfiction Link -->
     <a
       href="/mm/nonfiction/severed.html"
       class="pieceLink pieceLink-LF"
@@ -485,8 +512,8 @@
   </div>
 </div>
 
-    <!--! Nonfiction SF -->
-    <!-- <!--! Shortform Nonfiction -->
+    <!-- ! Nonfiction SF -->
+    <!-- ====== The Greener Side Container ====== -->
 <div class="toc-pieceLinks--SF pointerEvents-none" id="toc-SFDisplay">
   <a href="#" class="pieceLink pieceLink-SF" id="sf4">Finding Zen</a>
   <div class="sf4-line">
@@ -583,13 +610,14 @@
   </div>
   <a href="#" class="pieceLink pieceLink-SF" id="sf10">The Midwestern Root</a>
 </div>
- -->
+
     <!--! Aphorisms  -->
-    <!--! Aphorisms -->
+    <!-- ====== Aphorisms Container ====== -->
 <div
   class="toc-pieceLinks--aphorisms pointerEvents-none"
   id="toc-aphorismsDisplay"
 >
+  <!-- ====== ToC Mini Container ====== -->
   <div class="toc-miniContainer">
     <div class="miniContainer-header">Aphorism List</div>
     <div class="miniContainer-header--close" id="aphorismClose">Close</div>
@@ -634,7 +662,7 @@
 </div>
 
     <!--! Poetry -->
-    <!--! Poetry -->
+    <!-- ====== Poetry Container ====== -->
 <div class="toc-pieceLinks--poetry pointerEvents-none" id="toc-poetryDisplay">
   <div class="toc-miniContainer">
     <div class="miniContainer-header">Poem List</div>
@@ -680,7 +708,7 @@
 </section>
 
 <!--! Greener Side Modals -->
-<!-- MODALS -->
+<!-- ====== The Greener Side Modals ====== -->
 <!-- FINDING ZEN -->
 <div class="modal" id="findingZen">
   <h5 class="modal-header">Finding Zen</h5>
@@ -712,7 +740,6 @@
     <div class="line-2"></div>
   </span>
 </div>
-
 <!-- INTO THE GRAY -->
 <div class="modal" id="intoTheGray">
   <h5 class="modal-header">Into the Gray</h5>
@@ -790,7 +817,6 @@
     <div class="line-2"></div>
   </span>
 </div>
-
 <!-- The Greener Side PT 1 -->
 <div class="modal" id="partOne">
   <h5 class="modal-header">The Greener Side - Part One</h5>
@@ -831,7 +857,6 @@
     <div class="line-2"></div>
   </span>
 </div>
-
 <!-- The Greener Side PT 2 -->
 <div class="modal" id="partTwo">
   <h5 class="modal-header">The Greener Side - Part Two</h5>
