--- a/mm/nonfiction/severed.html
+++ b/mm/nonfiction/severed.html
@@ -18,14 +18,14 @@
 
     <link rel="preconnect" href="https://fonts.gstatic.com" />
 
-    <!-- BASE FONTS ======-->
+    <!--====== BASE FONTS ======-->
 
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
       rel="stylesheet"
     />
 
-    <!-- PAGE FONTS ======-->
+    <!--====== PAGE FONTS ======-->
     <link
       href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap"
       rel="stylesheet"
@@ -53,7 +53,7 @@
     <a href="/index.html" class="topNav-title">Maxa Millennial Collections</a>
   </div>
   <div class="topNav-right">
-    <a href="https://panagram.work/" class="topNav-link">Panagram</a>
+    <a href="/index.html" class="topNav-link">Table of Contents</a>
   </div>
 </section>
 
