Added modal close on outside click and esc key

--- a/index.html
+++ b/index.html
@@ -515,41 +515,41 @@
     <!-- ! Nonfiction SF -->
     <!-- ====== The Greener Side Container ====== -->
 <div class="toc-pieceLinks--SF pointerEvents-none" id="toc-SFDisplay">
-  <a href="#" class="pieceLink pieceLink-SF" id="sf4">Finding Zen</a>
+  <a href="#" class="pieceLink modalBtn pieceLink-SF" id="sf4">Finding Zen</a>
   <div class="sf4-line">
     <div class="sf4-line--movingBlock"></div>
   </div>
-  <a href="#" class="pieceLink pieceLink-SF" id="sf5">Into the Gray</a>
+  <a href="#" class="pieceLink modalBtn pieceLink-SF" id="sf5">Into the Gray</a>
   <div class="sf5-line">
     <div class="sf5-line--movingBlock"></div>
   </div>
-  <a class="pieceLink pieceLink-SF" id="sf14">The Greener Side</a>
+  <a class="pieceLink modalBtn pieceLink-SF" id="sf14">The Greener Side</a>
   <div class="sf14-line sf14-line--1">
     <div class="sf14-line--movingBlock"></div>
   </div>
   <div class="sf14-line sf14-line--2">
     <div class="sf14-line--movingBlock"></div>
   </div>
-  <a href="#" class="pieceLink pieceLink-SF" id="sf15">
+  <a href="#" class="pieceLink modalBtn pieceLink-SF" id="sf15">
     1
     <div class="sf15-line"><div class="sf15-line--movingblock"></div></div>
   </a>
-  <a href="#" class="pieceLink pieceLink-SF" id="sf16">
+  <a href="#" class="pieceLink modalBtn pieceLink-SF" id="sf16">
     2
 
     <div class="sf15-line"><div class="sf15-line--movingblock"></div></div>
   </a>
-  <a href="#" class="pieceLink pieceLink-SF" id="sf17">
+  <a href="#" class="pieceLink modalBtn pieceLink-SF" id="sf17">
     3
 
     <div class="sf15-line"><div class="sf15-line--movingblock"></div></div>
   </a>
-  <a href="#" class="pieceLink pieceLink-SF" id="sf18">
+  <a href="#" class="pieceLink modalBtn pieceLink-SF" id="sf18">
     4
 
     <div class="sf15-line"><div class="sf15-line--movingblock"></div></div>
   </a>
-  <a href="#" class="pieceLink pieceLink-SF" id="sf19">
+  <a href="#" class="pieceLink modalBtn pieceLink-SF" id="sf19">
     5
 
     <div class="sf15-line sf15-line--special2">
@@ -559,14 +559,16 @@
       <div class="sf15-line--movingblock"></div>
     </div>
   </a>
-  <a href="#" class="pieceLink pieceLink-SF" id="sf2">
+  <a href="#" class="pieceLink modalBtn pieceLink-SF" id="sf2">
     Demolition Derby: HOUSE FOR SALE
   </a>
-  <a href="#" class="pieceLink pieceLink-SF" id="sf9">End Days</a>
+  <a href="#" class="pieceLink modalBtn pieceLink-SF" id="sf9">End Days</a>
   <div class="sf9-line">
     <div class="sf9-line--movingBlock"></div>
   </div>
-  <a href="#" class="pieceLink pieceLink-SF" id="sf11">Moments In-Between</a>
+  <a href="#" class="pieceLink modalBtn pieceLink-SF" id="sf11">
+    Moments In-Between
+  </a>
   <div class="sf11-line sf11-line--1">
     <div class="sf11-line--movingBlock"></div>
   </div>
@@ -579,36 +581,46 @@
   <div class="sf11-line sf11-line--4">
     <div class="sf11-line--movingBlock"></div>
   </div>
-  <a href="#" class="pieceLink pieceLink-SF" id="sf6">My Existential Romance</a>
+  <a href="#" class="pieceLink modalBtn pieceLink-SF" id="sf6">
+    My Existential Romance
+  </a>
   <div class="sf6-line">
     <div class="sf6-line--movingBlock"></div>
   </div>
-  <a href="#" class="pieceLink pieceLink-SF" id="sf1">
+  <a href="#" class="pieceLink modalBtn pieceLink-SF" id="sf1">
     The Reasons I Can't Find
   </a>
   <div class="sf1-line">
     <div class="sf1-line--movingBlock"></div>
   </div>
-  <a href="#" class="pieceLink pieceLink-SF" id="sf7">
+  <a href="#" class="pieceLink modalBtn pieceLink-SF" id="sf7">
     The Feeling of a Soft Mind
   </a>
   <div class="sf7-line">
     <div class="sf7-line--movingBlock"></div>
   </div>
-  <a href="#" class="pieceLink pieceLink-SF" id="sf8">The Outside Witness</a>
+  <a href="#" class="pieceLink modalBtn pieceLink-SF" id="sf8">
+    The Outside Witness
+  </a>
   <div class="sf8-line">
     <div class="sf8-line--movingBlock"></div>
   </div>
-  <a href="#" class="pieceLink pieceLink-SF" id="sf3">The Day I Died Again</a>
+  <a href="#" class="pieceLink modalBtn pieceLink-SF" id="sf3">
+    The Day I Died Again
+  </a>
   <div class="sf3-line">
     <div class="sf3-line--movingBlock"></div>
   </div>
-  <a href="#" class="pieceLink pieceLink-SF" id="sf12">Switched</a>
-  <a href="#" class="pieceLink pieceLink-SF" id="sf13">The Wheel Is Turning</a>
+  <a href="#" class="pieceLink modalBtn pieceLink-SF" id="sf12">Switched</a>
+  <a href="#" class="pieceLink modalBtn pieceLink-SF" id="sf13">
+    The Wheel Is Turning
+  </a>
   <div class="sf13-line">
     <div class="sf13-line--movingBlock"></div>
   </div>
-  <a href="#" class="pieceLink pieceLink-SF" id="sf10">The Midwestern Root</a>
+  <a href="#" class="pieceLink modalBtn pieceLink-SF" id="sf10">
+    The Midwestern Root
+  </a>
 </div>
 
     <!--! Aphorisms  -->
