Updated modal for landing page

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <div class="topNav-hamMenu--line" id="hamLine2"></div>
       <div class="topNav-hamMenu--line" id="hamLine3"></div>
     </div>
-    <a href="/index.html" class="topNav-title">Maxa Millennial Collections</a>
+    <p class="topNav-title">Maxa Millennial Collections</p>
   </div>
   <div class="topNav-right">
     <a href="/index.html" class="topNav-link">Table of Contents</a>
@@ -1285,6 +1285,33 @@
 </div>
 
 
+<!--! Landing Modal -->
+<div class="modal-container showModal" id="modal-opened">
+  <div class="modal-landing showModal">
+    <div class="modal__details">
+      <h1 class="modal__title">Welcome</h1>
+      <p class="modal__description">
+        Below are some details about this project that will help navigate this
+        website.
+      </p>
+    </div>
+
+    <p class="modal__text">
+      This website is a collection of writing and photography. Beyond this, all
+      the pieces as a whole make an argument about the self. It asks questions
+      like 'Who are we?' and 'Who are you?'
+    </p>
+
+    <p class="modal__text">
+      Ultimately, there are more questions than answers here, but it's the
+      introspective self that sits at the core of all these ideas.
+    </p>
+
+    <a href="#modal-closed" class="link-2"></a>
+  </div>
+</div>
+
+
 
 <!-- Endblock -->
 
@@ -1295,6 +1322,7 @@
     <script src="/js/aphorisms.js"></script>
     <script src="/js/mediaQueries.js"></script>
     <script src="/js/tocModals.js"></script>
+    <script src="/js/tocLandingModal.js"></script>
     <!-- Default Statcounter code for My Writing Website http://maxamillennial.org
 -->
     <script type="text/javascript">
