--- a/index.html
+++ b/index.html
@@ -111,55 +111,55 @@
     <!------------ SHORTFORM NONFICTION ------------>
 <div class="subNav pointerEvents-none" id="list-nonfiction-short">
   <h2 class="subNav-header">The Greener Side</h2>
-  <a href="#" class="subNav-link" id="sfM1">
+  <a href="#" class="subNav-link modal-mobile" id="sfM1">
     <p class="subNav-link--text">Finding Zen</p>
   </a>
-  <a href="#" class="subNav-link" id="sfM2">
+  <a href="#" class="subNav-link modal-mobile" id="sfM2">
     <p class="subNav-link--text">Into the Gray</p>
   </a>
-  <a href="#" class="subNav-link" id="sfM4">
+  <a href="#" class="subNav-link modal-mobile" id="sfM4">
     <p class="subNav-link--text">The Greener Side - Part 1</p>
   </a>
-  <a href="#" class="subNav-link" id="sfM5">
+  <a href="#" class="subNav-link modal-mobile" id="sfM5">
     <p class="subNav-link--text">The Greener Side - Part 2</p>
   </a>
-  <a href="#" class="subNav-link" id="sfM6">
+  <a href="#" class="subNav-link modal-mobile" id="sfM6">
     <p class="subNav-link--text">The Greener Side - Part 3</p>
   </a>
-  <a href="#" class="subNav-link" id="sfM3">
+  <a href="#" class="subNav-link modal-mobile" id="sfM3">
     <p class="subNav-link--text">Demolition Derby: HOUSE FOR SALE</p>
   </a>
-  <a href="#" class="subNav-link" id="sfM7">
+  <a href="#" class="subNav-link modal-mobile" id="sfM7">
     <p class="subNav-link--text">The Greener Side - Part 4</p>
   </a>
-  <a href="#" class="subNav-link" id="sfM8">
+  <a href="#" class="subNav-link modal-mobile" id="sfM8">
     <p class="subNav-link--text">The Greener Side - Part 5</p>
   </a>
-  <a href="#" class="subNav-link" id="sfM9">
+  <a href="#" class="subNav-link modal-mobile" id="sfM9">
     <p class="subNav-link--text">End Days</p>
   </a>
-  <a href="#" class="subNav-link" id="sfM10">
+  <a href="#" class="subNav-link modal-mobile" id="sfM10">
     <p class="subNav-link--text">Moments In-between</p>
   </a>
-  <a href="#" class="subNav-link" id="sfM11">
+  <a href="#" class="subNav-link modal-mobile" id="sfM11">
     <p class="subNav-link--text">My Existential Romance</p>
   </a>
-  <a href="#" class="subNav-link" id="sfM12">
+  <a href="#" class="subNav-link modal-mobile" id="sfM12">
     <p class="subNav-link--text">The Feeling of a Soft Mind</p>
   </a>
-  <a href="#" class="subNav-link" id="sfM13">
+  <a href="#" class="subNav-link modal-mobile" id="sfM13">
     <p class="subNav-link--text">The Outside Witness</p>
   </a>
-  <a href="#" class="subNav-link" id="sfM14">
+  <a href="#" class="subNav-link modal-mobile" id="sfM14">
     <p class="subNav-link--text">The Reasons I Can't Find</p>
   </a>
-  <a href="#" class="subNav-link" id="sfM15">
+  <a href="#" class="subNav-link modal-mobile" id="sfM15">
     <p class="subNav-link--text">The Day I Died Again</p>
   </a>
-  <a href="#" class="subNav-link" id="sfM16">
+  <a href="#" class="subNav-link modal-mobile" id="sfM16">
     <p class="subNav-link--text">The Wheel Is Turning</p>
   </a>
-  <a href="#" class="subNav-link" id="sfM17">
+  <a href="#" class="subNav-link modal-mobile" id="sfM17">
     <p class="subNav-link--text">The Midwestern Root</p>
   </a>
 </div>
