added clicky analytics

--- a/index.html
+++ b/index.html
@@ -1325,5 +1325,16 @@
     <script src="/js/mediaQueries.js"></script>
     <script src="/js/tocModals.js"></script>
     <script src="/js/tocLandingModal.js"></script>
+    <script async src="//static.getclicky.com/101393515.js"></script>
+    <noscript>
+      <p>
+        <img
+          alt="Clicky"
+          width="1"
+          height="1"
+          src="//in.getclicky.com/101393515ns.gif"
+        />
+      </p>
+    </noscript>
   </body>
 </html>
