--- a/mm/about.html
+++ b/mm/about.html
@@ -7,7 +7,25 @@
  
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <script type="text/javascript">
+      window.smartlook ||
+        (function (d) {
+          var o = (smartlook = function () {
+              o.api.push(arguments);
+            }),
+            h = d.getElementsByTagName('head')[0];
+          var c = d.createElement('script');
+          o.api = new Array();
+          c.async = true;
+          c.type = 'text/javascript';
+          c.charset = 'utf-8';
+          c.src = 'https://web-sdk.smartlook.com/recorder.js';
+          h.appendChild(c);
+        })(document);
+      smartlook('init', '3628a3bce338af9c4abe59c4c0155cabf289c2f4', {
+        region: 'eu',
+      });
+    </script>
     <!--====== FONT AWESOME ======-->
     <link
       rel="stylesheet"
@@ -328,16 +346,5 @@
     <!------- JAVASCRIPT ------->
     <script src="/js/topNav.js"></script>
     <script src="/js/smoothScroll.js"></script>
-    <script async src="//static.getclicky.com/101393515.js"></script>
-    <noscript>
-      <p>
-        <img
-          alt="Clicky"
-          width="1"
-          height="1"
-          src="//in.getclicky.com/101393515ns.gif"
-        />
-      </p>
-    </noscript>
   </body>
 </html>
